# triplclust_rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py  triplclust_py.pyi  zensical.toml
.github/workflows/: docs.yml  python_build.yaml  rust_build.yaml
crates/triplclust_py/: Cargo.toml  README.md
crates/triplclust_py/src/: error.rs  lib.rs
crates/triplclust_rs/: Cargo.toml  README.md
crates/triplclust_rs/benches/: benchmark.rs
crates/triplclust_rs/src/: cluster.rs  dnn.rs  error.rs  lib.rs  params.rs  smooth.rs  triplet.rs  utils.rs
data/: debug_cdist.csv  debug_smoothed.csv  result.csv
docs/: api.md  index.md
