[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "triplclust_py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"
author = "Gordon McCann"
license = "LICENSE"

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"
manifest-path = "./crates/triplclust_py/Cargo.toml"
