[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "triplclust_py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"
author = "Gordon McCann"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.optional-dependencies]
docs = [
    "zensical>=0.0.43",
    "mkdocstrings-python>=2.0.3"
]

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"
manifest-path = "./crates/triplclust_py/Cargo.toml"

[tool.maturin.generate-ci.github]
trusted-publishing = true
# Optional: name of the GitHub Actions environment to use for the release job
publishing-environment = "pypi"

