[package]
name = "triplclust_py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"


[lib]
name = "triplclust_py"
crate-type = ["cdylib"]

[dependencies]
triplclust_rs.workspace = true
numpy.workspace = true
pyo3 = "0.28.2"

