[package]
name = "triplclust_rs"
readme.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
itertools = "0.14.0"
kiddo = "5.3.0"
kodama = "0.3.0"
numpy.workspace = true
rustc-hash = "2.1.2"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "benchmark"
harness = false
